Omstrukturering vedr. inertimomentberegning. Nu i appendix.

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -44,6 +44,8 @@
 \input{./content/problemequation}
 \newpage
 \input{./content/app_DCmotor}
+\newpage
+\input{./content/app_panandtiltparameter}
 
 
 
