--- a/Rapport/content/app_panandtiltparameter.tex
+++ b/Rapport/content/app_panandtiltparameter.tex
@@ -1,8 +1,92 @@
-\section{Teoretisk bestemmelse af systemets karakteristika}
+\section{Beregning af inertimoment}
+\label{sec:inertimomentberegning}
+Dette appendix beskæftiger sig med beregningen af de teoretiske inertimomenter
+for pan- og tilt-rammerne. Der henvises til figur \ref{fig:inerti_PTS}, og
+beregningerne tager udgangspunkt i rammernes mål:
+\({L_{1}} =0,292\) [m],
+\({L_{2}} =0,280\) [m], \({L_{3}}= 0,42\) [m], \({L_{4}} =0,246\) [m], \({L_{pro}}=0,04\) [m].
+Den teoritiske beregning er foretaget ud fra følgende antagelser og simplificeringer:
+\begin{itemize}
+\item Aluminimumsprofilen, 40x40L, har en massefylde på \(\rho=1,5\) [kg/m], \citep[Kap. 2 side. 4]{alu_profil_desitet}.
+\item Rammerne simplificeres som bestående af tynde stænger, således at hver ramme har to stænger, hvis bidrag
+til inertimomentet kan beregnes som var de punktmasser forskudt i forhold til rotationsaksen\citep[Side. 254, ligning 10-36]{fund_of_physics},
+vha. ligning \ref{eq:punktmasse_para}.
+\begin{equation}
+J={ J }_{ com }+M\cdot { h }^{ 2 }
+\label{eq:punktmasse_para} 
+\end{equation}
+hvor \({J_{com}} = 0\) og \(h\) er afstand til punktmassen (stangen) fra rotationsaksen.
+Inertimomentet for de stænger, der står vinkelret på rotationsakserne, kan beregnes vha. ligning \ref{eq:stang}
+\citep[Side. 255, tabel 10-2e]{fund_of_physics}.
+\begin{equation}
+J=\frac { 1 }{ 12 } M\cdot { L }^{ 2 }
+\label{eq:stang} 
+\end{equation}
+\end{itemize}
 
-\subsection{Eksperimentel bestemmelse af karakteristika for Pan}
-\subsubsection{Fremgangsmåde og forsøgsopstilling}
-\subsubsection{Databehandling}
-\subsubsection{Diskussion konklusion}
+Med ovenstående formler er det muligt at finde Pan og Tilt-rammernes teoritiske inertimoment:
+\begin{align}
+\label{eq:inerti_tilt_pan}
+\begin{split}
+{ J }_{ tilt,1 } &= \left( \left( 1/12\cdot \rho \cdot { {L_{1}} }^{ 3 } \right) +\left( \rho \left( {L_{2}}-2\cdot {L_{pro}} \right) { \left( \frac { {L_{1}}-{L_{pro}}}{ 2 }  \right)  }^{ 2 } \right)  \right) \cdot 2
+\\
+ &= 0,0157499 \text{ [kg m$^2$]}
+\\
+{ J }_{ pan,1 }&=\left( 1/12\cdot \rho \cdot { { L }_{ 3 } }^{ 3 } \right) +\left( \rho \left( { L }_{ 4 }-{ L }_{ pro } \right) { \left( \frac { { L }_{ 3 }-{ L }_{ pro } }{ 2 }  \right)  }^{ 2 } \right) \cdot 2
+\\
+ &=0,0315708 \text{ [kg m$^2$]}
+\end{split}
+\end{align}
 
-\subsection{Konklusion}
+\todo[inline, author=Michael, color=blue! 50]{Jeg har regnet mig frem til at tilt bevæger sig indenfor for disse grænser:   ( -0,54 degree < tilt < 12,15 degree ). (Dette gælder hvis PTS origin er placeret 0,4 m over Station 4, hvilket er vores udgangspunkt). }
+Tilt-rammens indflydelse på inertimomentet som pan-motoren skal rotere, er afhængig af tilt-rammens vinkel.
+Når tilt-rammen er lodret er bidraget til pan-inertimomentet mindst, jf. ligning \ref{eq:punktmasse_para}, fordi afstanden
+af to af stængerne til rotationsaksen (pan) er mindst. Ligeledes vil bidraget til pan-inertimomentet være størst når tilt-rammen er vandret.
+Dette giver en kobling mellem pan og tilt, hvilket er uønsket under designet af reguleringssløjfen, som beskrevet i afsnit \ref{sec:matPTS}.
+En simplificering er således at inkludere bidraget i modellen for pan som en konstant.
+Man kan argumentere for, at denne konstant bør være gennemsnittet af bidragene for hele bevægelsen.
+Denne ville kunne tilnærmes ud fra den ideelle responskurve for tilt-systemet, der kan beregnes ud fra den faste parabel, som gives som input.
+Værdien ville således være baseret på ét specifikt parabelinput. En anden tilgang kunne være at vælge minimum-bidraget, og dermed
+have en værdi der er nøjagtig for de tilt-vinkler, der er tæt på lodret, og mere og mere unøjagtig jo mere vandret tilit-vinklen er.
+Sidstnævnte tilgang vælges, fordi tilt-vinklen i lerdueskydningen er tæt på lodret
+\todo[inline,author=Mikael]{Påstanden er uden belæg. Indsæt reference til tilt-vinklen som funktion af tiden evt.},
+og antagelsen om konstant bidrag til inertimoment derfor er nøjagtig.
+
+Tilt-rammens bidrag til inertimomentet for pan bestemmes derfor ud fra, at to af tilt-rammens "stænger" er parallele med
+rotationsaksen, og at de to stænger med længden \({L_{2}}\) er vinkelret på den, samt at de roterer om den.
+Med ligningerne \ref{eq:punktmasse_para} og \ref{eq:stang}
+kan tilt-rammens bidrag til pan-inertimomentet altså beregnes vha ligning \ref{eq:tiltOnPan}.
+\begin{align}
+J_{pan,tilt_{min}}&=2\cdot{}\left(\frac{1}{12}\cdot{}\rho\cdot{}L_{2}^3
++\rho\cdot{}\left(L_1-2\cdot{}L_{pro}\right)\left(\frac{L_2-L_{pro}}{2}\right)^2\right)
+\\
+&=0,0146464 \text{ [kg m$^2$]}
+\label{eq:tiltOnPan} 
+\end{align}
+Inertimomentet på pan-aksen er derfor givet ved summationen af pan-rammens inertimoment og tilt-rammens inertimoment,
+som angivet i ligning \ref{eq:pan_inerti}.
+\begin{align}
+{ J }_{ pan,1.1 } &= J_{ pan,1 }+J_ { pan,tilt_{ min} }
+\\&=0,0462172 \text{ [kg m$^2$]}
+\label{eq:pan_inerti} 
+\end{align}
+
+Inertimomentet for tilt er beregnet i ligning \ref{eq:inerti_tilt_pan}, mens inertimomentet for pan er beregnet i ligning \label{eq:pan_inerti}.
+Systemets gearing gør dog at inertimomenterne som motorerne belastes med, er mindre.
+Gearingen i EMG30-motoren er i forholdet 30:1, mens gearingen til rammerne er i forholdet 1:3.
+Ligning \ref{eq:gearing0} giver forholdet mellem det reflekterede inertimoment \(J_r\) (som motoren belastes med)
+og inertimomentet \(J\) efter en gearing med forholdet \(N\) \citep{gear_inerti}.
+\begin{equation}
+J_r=\frac{J}{N^2}
+\label{eq:gearing0}
+\end{equation}
+\(N\) kan altså bestemmes som multiplikationen af de to gearingsforhold, og er således lig med 10.
+I ligningerne \ref{eq:inerti_tilt_pan_fak} er de reflekterede inertimomenter beregnet.
+\begin{align}
+\label{eq:inerti_tilt_pan_fak}
+\begin{split}
+{J_{tilt}}&=1,57499\cdot{10}^{-4} \text{ [kg m$^2$]}
+\\
+{J_{pan}}&=4,62172\cdot{10}^{-4} \text{ [kg m$^2$]}
+\end{split}
+\end{align}
