--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -18,6 +18,7 @@ at de altid vil være tilnærmelser, og ikke beskriver ulineariteter som dødbå
 En skitse af Pan \& Tilt-systemet findes i figur \todo{figur}.
 \missingfigure{Model med Open Loop Pan\&Tilt-system (koblet)}
 
+\subsection{Afkobling af pan og tilt}
 Når den ene af de to rammer roterer vil en kraftmoment-induceret præcession påvirke den anden ramme.
 Samtidig vil tilt-rammens vinkel påvirke inertimomentet omkring pan-aksen, og dermed
 pan-motorens overførselsfunktion.
@@ -29,6 +30,7 @@ Afkoblingen af de to systemer, og opdelingen i hhv. pan og tilt gør, at der kan
 til hvert system, og at der skal findes en overførselsfunktion for hvert system.
 De følgende beregninger tager altså udgangspunkt i det simplificerede afkoblede system.
 
+\subsection{DC-Motor}
 To DC-motorer af typen EMG30 er forbundet til systemet.
 Det antages, at motorerne kan beskrives ved samme matematiske model.
 Den matematiske model af DC-motoren er beskrevet i appendix \ref{sec:dcmotor},
@@ -51,6 +53,15 @@ for yderligere forklaring af modellen.
 \(L_m\) er motorens ækvivalente induktans, \(R_m\) dens resistans, \(J_m\) dens indre inertimoment,
 \(K_t\) er kraftmomentproportionalitetskonstanten, \(K_b\) er proportionalitetskonstanten for den modelektromotoriske kraft,
 mens \(B\) er den viskøse friktionskoefficient.
+\begin{figure}[th!]
+	\centering
+	\input{content/tb_motorparametre.tex}
+	\captionsetup{type=table}
+	\caption[Motorparametre]
+			{Eksperimentelt bestemte motorparametre.}
+	\label{tb:matmotorparametre}
+\end{figure}
+De eksperimentelt bestemte motorparametre står i tabel \ref{tb:matmotorparametre}.
 Det er vigtigt at bemærke, at de to motorer adskiller sig fra hinanden ved parameteren \(J_L\), som er belastningens
 inertimoment. Dette er ikke en egentlig motorparameter, men en parameter der udelukkende afhænger
 af pan- og tilt-rammernes dimensioner og vinkel.
@@ -73,10 +84,6 @@ i ligning \ref{eq:transTheta}.
 	G_m\left(s\right)=\frac{\Omega\left(s\right)}{V_m\left(s\right)}\cdot{}\frac{1}{s}=\frac{1}{k_1s^3+k_2s^2+k_3s}
 	\label{eq:transTheta}
 \end{equation}
-
-FPGA'ens positionsencoders læser motorens vinkel inden reduktionsgearingen,
-altså outputtet af \(G_m\left(s\right)\).
-
 DC-motorens overførselsfunktion afhænger af dens belastning,
 og belastningen (inertimomentet \(J_L\) der skal roteres) er indeholdt i konstanterne \(k_1\) og \(k_2\).
 Der er altså en separat overførselsfunktion \(G_m\left(s\right)\) for Pan og for Tilt,
@@ -84,6 +91,25 @@ da rammerne har forskelligt inertimoment.
 De to belastningsinertimomenter benævnes hhv. \(J_{pan}\) og \(J_{tilt}\),
 og de to forskellige overførselsfunktioner benævnes hhv. \(G_{m,p}\) og \(G_{m,t}\).
 Bestemmelsen af inertimomenterne findes i afsnit \ref{sec:inertimoment}.
+
+\subsection{FPGA-modulerne}
+FPGA'ens positionsencoders læser motorens vinkel inden reduktionsgearingen,
+altså outputtet af \(G_m\left(s\right)\).
+Der er altså tale om en kvantisering af output-vinklen.
+Gearingen til rammerne er i forholdet 1:3, og da der er 360 encoder-ticks pr. rotation [\cite{emgmotor}],
+er kvantiseringsintervallet \(\frac{1}{1080}\).
+
+På FPGA'en genereres et PWM-signal til hver motors H-bro ud fra en
+duty cycle som mikrokontrolleren leverer.
+PWM-signalet forstærkes af H-broen til et firkantsignal med en amplitude på 12 [V],
+som leveres til motoren.
+En overførselsfunktion for denne duty cycle - motorspændingsfald konvertering ønskes
+til reguleringen.
+Det vælges at modellere konverteringen som en simpel lineær forstærkning af en duty cycle mellem -100 \% og +100 \%
+til en DC-spænding mellem -12 [V] og +12 [V]. Med denne simple model ændres systemets orden ikke,
+og det vurderes, at tidsforsinkelsen fra input duty cycle til motorbevægelse er negligerbar.
+\todo[inline,author=Mikael,color=red]{Er det bedre at modellere konverteringen som et analogt lavpasfilter?????}
+\todo[inline,author=Mikael]{Dedikér et underafsnit til diskussion af tidsforsinkelser, digitale såvel som analoge.}
 
 \subsection{Pan \& Tilt-rammernes inertimoment}
 \label{sec:inertimoment}
