--- a/Rapport/graphics/openloop1.tex
+++ b/Rapport/graphics/openloop1.tex
@@ -4,7 +4,7 @@
 \node [output, right of=Gm] (output){};
 
 \draw [draw,->] (input) -- node {\footnotesize $d.c.(t)$} (PWM);
-\draw [draw,<-] (output) -- node {\footnotesize $\theta\left(t\right)$} (Gm);
+\draw [draw,->] (Gm) -- node[name=theta] {\footnotesize $\theta\left(t\right)$} (output);
 
 \draw [draw,->] (PWM) -- (Gm);
 
@@ -18,14 +18,13 @@
 
 
 
-
 \node [input, name=input1, right of=output,xshift=-2.2cm]{};
 \node [block, right of=input1] (PWM1) {\(PWM\left(s\right)\)};
 \node [block, right of=PWM1,xshift=0cm] (Gm1) {\(G_{m,p}\left(s\right)\)};
 \node [output, right of=Gm1] (output1){};
 
 \draw [draw,->] (input1) -- node {\footnotesize $d.c.(t)$} (PWM1);
-\draw [draw,<-] (output1) -- node {\footnotesize $\phi\left(t\right)$} (Gm1);
+\draw [draw,->] (Gm1) -- node {\footnotesize $\phi\left(t\right)$} (output1);
 
 \draw [draw,->] (PWM1) -- (Gm1);
 
