--- a/Rapport/content/tb_motorparametre.tex
+++ b/Rapport/content/tb_motorparametre.tex
@@ -2,7 +2,7 @@
 Parameter&Værdi&Enhed\\\hline
 \(R_m\)&\(5,215\)&\([\Omega]\)\\
 \(L_m\)&\(2,2\cdot{}10^{-3}\)&\(\text{[H]}\)\\
-\(K_b\)&\(0,517\)&\(\left[ \text{V}\cdot\frac{\text{s}}{\text{rad} }\right] \)\\
+\(K_b\)&\(0,517\)&\(\left[ \frac{\text{V} \cdot \text{s} }{ \text{ rad } }  \right] \)\\
 \(K_t\)&\(0,517\)&\(\left[ \frac{\text{N}\cdot \text{m}}{\text{A}} \right] \)\\
 \(B\)&\(0,00319\)&\(\left[  \text{N} \cdot \text{m} \cdot \text{s}\right] \)\\
 \(J_m\)&\(8,26\cdot10^{-4}\)&\(\left[ \text{kg}\cdot{\text{m}^2} \right]  \)\\
