--- a/Rapport/content/tb_kbktb.tex
+++ b/Rapport/content/tb_kbktb.tex
@@ -1,4 +1,4 @@
 \begin{tabular}{r|r|r}
-$K_b$ [$\text{V}\cdot\frac{\text{s}}{\text{rad}}$]&$K_t$ [$\frac{\text{N m}}{\text{A}}$]&$B$ [N m s]\\\hline
+$K_b$ [$\frac{\text{V} \cdot \text{s}}{\text{rad}}$]&$K_t$ [$\frac{\text{N} \cdot \text{m}}{\text{A}}$]&$B$ $[\text{N} \cdot \text{m} \cdot \text{s}]$\\\hline
 0,517&0,517&0,00319\\
 \end{tabular}
