--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -1,12 +1,14 @@
-\section{Mikrokontroller}
-\label{sec:mikrokontroller}
-\subsection{Krav til mikrokontrolleren}
+\section{Mikrocontroller}
+\label{sec:mikrocontroller}
+\subsection{Krav til mikrocontrolleren}
 \todo[inline, author=Michael]{Husk at TEST sektionen skal se om vi opfylder disse krav. Hvis ikke vi tester tingene skal de slettes fra dette afsnit!!!}
-Mikrokontrolleren har følgende opgaver: 
+Mikrocontrolleren har følgende opgaver: 
 \todo[inline, author=Michael]{YOU CANT TOUCH THIS - lad mig lige skrive færdig!}
 \todo[inline, author=Michael]{Denne sektion mangler generelt at blive forkortet. }
 \todo[inline, author=Michael]{Anders, kan vi ændre layouttet så listerne ikke tager så meget plads? }
+
 \begin{itemize}
+\itemsep1pt
 	\item Afvikling af regulatorerne.
 	\item Kommunikation med FPGA vha. SPI.
 	\item Modtage kommandoer fra PC'en via UART.
@@ -16,7 +18,7 @@ Mikrokontrolleren har følgende opgaver:
 Regulatorerne skal afvikles i realtid, da det ellers er vanskelligt at modellere forsinkelsen matematisk.
 
 
-SPI\footnote{Serial Peripheral Interface, også kaldet SSI} bruges til at overføre PTS's position fra FPGA til mikrokontroller. Desuden overføres beregnet duty-cycle fra mikrokontroller til FPGA. Kommunikationen skal være tilpas hurtig, så regulatorerne ikke beregner på forældet data. Forsinkelsen for overførsel af data må ikke overstige 5\% af sampletiden. 
+SPI\footnote{Serial Peripheral Interface, også kaldet SSI} bruges til at overføre PTS's position fra FPGA til mikrocontroller. Desuden overføres beregnet duty-cycle fra mikrocontroller til FPGA. Kommunikationen skal være tilpas hurtig, så regulatorerne ikke beregner på forældet data. Forsinkelsen for overførsel af data må ikke overstige 5\% af sampletiden. 
 \todo[inline, author=Michael]{Ved Ts = 1/600 er det $8,33 * 10^5$. Indsæt de endelige tal når matematikgruppen når videre med tallene. }
 
 Systemet skal kunne modtage brugerinput gennem et terminalprogram. Brugerinterfacet er ikke tidskritisk. Der skal være mulighed for at udlæse systemparametre:
@@ -51,7 +53,7 @@ SPI er indbygget som et hardwaremodul, med seperate FIFO buffere til afsendelse 
 
 UART er også implementeret som et hardwaremodul. Modulet indeholder seperate FIFO buffere til afsendelse og modtagelse af data, hver med plads til 16 datawords (max 8 bit). 
 
-Kontrolleren indeholder også et væld af hardwaremoduler til andre funktioner, men disse er ikke relevante for projektet.
+Controlleren indeholder også et væld af hardwaremoduler til andre funktioner, men disse er ikke relevante for projektet.
 
 
 
