Tilføjet måling af pans bevægelsesfrihed

--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -67,8 +67,7 @@ Der er altså et krav om at geværet peger på lerduen med en præcision på \(\
 Dette krav gælder for både pan-rammens vinkel (\(\phi\)) og tilt-rammens vinkel (\(\theta\)).
 
 Tilt-rammen kan bevæge sig frit,
-men pan-rammen kan pga. en stopklods kun rotere
-\(170 \degree\)\todo[inline,author=Mikael]{Denne værdi er ukorrekt! Mål efter!}.
+men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt}.
 Dette giver altså en øvre og en nedre grænse for pan-rammens maksimale udsving,
 som afhænger af reguleringen
 - et for højt overshoot på pan-positionen kan give udsving, der ikke holder sig inden for grænserne.
