Ordnet henvisning til openloop systemet.

--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -15,8 +15,7 @@ model af Pan \& Tilt-systemet af følgende årsager:
 Ulempen ved at bruge teoretiske lineære matematiske modeller er,
 at de altid vil være tilnærmelser, og ikke beskriver ulineariteter som dødbånd og tidsforsinkelser.
 
-En skitse af Pan \& Tilt-systemet findes i figur \todo{figur}.
-\missingfigure{Model med Open Loop Pan\&Tilt-system (koblet)}
+En skitse af Pan \& Tilt-systemet findes i figur \ref{fig:overview_openloop_PTS}.
 
 \subsection{Afkobling af pan og tilt}
 Når den ene af de to rammer roterer vil en kraftmoment-induceret præcession påvirke den anden ramme.
