Ændre manglende skrivearbejde til dynamisk opdatering (vha. todo's).

--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -1,27 +1,27 @@
-\section*{Forkortelser}
+\section*{Preface}
 
+\subsection*{Projekt overview}
+
+
+\subsection*{CDROM indhold}
+\begin{itemize}
+\item 
+\end{itemize}
+
+
+
+\subsection*{Forkortelser}
 ES = English Skeet \\
 PTS = Pan and Tilt System
 
-\subsection*{Huske liste}
-\begin{itemize}
-\item Tallene skal stå kommaspereret.
-\item \todo[inline,author=Anders]{Mikael, vil du ikke lige tjekke op det der står i sec:4. Jeg er i tvivl om B. Jeg har kigget andre steder, hvor der står vi skal bruge den viskøse friktion og ikke kb eller kt.}
-\end{itemize}
 
 
-
+\newpage
 \subsection*{Mangler at blive laver/skrevet}
 \begin{itemize}
-\item Abstract
-\item Forord
-\item Indledning
-\item Pan \& Tilt-rammernes inertimoment
-\item Reguleringsdesign
-\item FPGA (Første udkast er lavet)
+
 \item Mikrokontroller
 \item Kommunikation mellem FPGA og Mikrokontroller
 \item 
-\listoftodos
-
 \end{itemize}
+\listoftodos
