--- a/Rapport/content/forord.tex
+++ b/Rapport/content/forord.tex
@@ -5,3 +5,5 @@
 \textit{Må jeg være fri! Ti stille! Det er for galt. Jeg finder mig ikke i det! Det er det samme hver gang. Det er det samme hver eneste gang. Man har en plan - en genial plan! - og så er man omgivet af hundehoveder og hængerøve, lusede amatører, elendige klamphuggere, latterlige skidesprællere, talentløse skiderikker, impotente grødbønder, småbørnspædagoger og socialdemokrater!}
 \\[1 cm]
 \textit{\textbf{-Egon Olsen}}
+
+\todo[inline,author=ALLE]{Mangler at blive skrevet}
