--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -1,6 +1,6 @@
 \section{Reguleringsdesign}
 \label{sec:kontrollerdeign}
-
+\todo[inline,author=ALLE]{Mangler at blive skrevet}
 Måske skal den første del placeret et andet sted. \\
 
 Litteratur/DCmotor/5.4
