--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,1 +1,15 @@
 \section*{Indledning}
+\todo[inline,author=ALLE]{Mangler at blive skrevet}
+Jeg tænker der kan startes med en kort indledning, hvorefter projektet bliver beskrevet. 
+
+
+
+
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[auto, node distance=1cm,>=latex']
+\include*{./graphics/PTSoverview}
+\end{tikzpicture}
+\caption[]{}
+\label{fig:overview_openloop_PTS}
+\end{figure}
