Tilføjelse af diskussion og konklusion

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -33,6 +33,8 @@
 \include{./content/Mikrocontroller}
 \include{./content/FPGA}
 \include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
+\include{./content/diskussion}
+\include{./content/konklusion}
 
 
 
