--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -1,4 +1,5 @@
 \section{Problemformulering}
+\label{sec:problemformulering}
 
 Et Pan \& Tilt-system (PTS) skal opbygges til tracking af en lerdue i English Skeet (ES).
 
