--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -9,7 +9,7 @@ Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordi
 Koordinattransformation tager udgangspunkt i den kartisiske stedvektor \(Pos(t) \), ligning \ref{eq:pf:vektorparabel3d} samt PTS's offset, ligning \ref{eq:pf:stedvektorparabel}.
 \begin{align}
 \begin{split}
-{ P }_{ c }=Pos\left( t \right) -PTS = \left( \begin{matrix} - 9,34\cdot t-13,7 \\32,851\cdot t-19,3\\-{ 4,91\cdot t }^{ 2 }+5,473\cdot t+2,6\end{matrix} \right) 
+{ P }_{ c }=Pos\left( t \right) -PTS = \left( \begin{matrix} - 9,34\cdot t-13,7 \\32,851\cdot t-19,3\\-{ 4,91\cdot t }^{ 2 }+5,473\cdot t+2,6\end{matrix} \right) [\text{m}]
 \label{eq:pf:stedvektorparabel}
 \end{split}
 \end{align}
