Nu er mangellisten udelukkende bestående af todo's

--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -17,11 +17,5 @@ PTS = Pan and Tilt System
 
 
 \newpage
-\subsection*{Mangler at blive laver/skrevet}
-\begin{itemize}
-
-\item Mikrokontroller
-\item Kommunikation mellem FPGA og Mikrokontroller
-\item 
-\end{itemize}
+\subsection*{Tekst som mangler at blive skrevet}
 \listoftodos
