--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -60,14 +60,15 @@ med en diameter på 1,32 [m] på en afstand på 37 [m], \todo[inline,author=Mika
 Spredningsvinklen er dermed givet ved ligning \ref{eq:ks:spredning}.
 \begin{align}
   Spredning &= \tan \left(\frac{1,32}{2} / 37 \right) \\
-  &= 2.04 \degree
+  &= 2,04 \degree
   \label{eq:ks:spredning}
 \end{align}
-Der er altså et krav om at geværet peger på lerduen med en præcision på \(\pm 1 \degree\).
+Der er altså et krav om at geværet peger på lerduen med en præcision på \(\pm 1,02 \degree\).
 Dette krav gælder for både pan-rammens vinkel (\(\phi\)) og tilt-rammens vinkel (\(\theta\)).
+For en 1-radian reference giver dette altså en maksimal steady state tracking error (SSE) på 1,78 \%.
 
 Tilt-rammen kan bevæge sig frit,
-men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt}.
+men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
 Dette giver altså en øvre og en nedre grænse for pan-rammens maksimale udsving,
 som afhænger af reguleringen
 - et for højt overshoot på pan-positionen kan give udsving, der ikke holder sig inden for grænserne.
