--- a/Rapport/graphics/PTSoverview.tex
+++ b/Rapport/graphics/PTSoverview.tex
@@ -1,12 +1,12 @@
-\node [draw, fill=blue!20, rectangle, minimum height=4em, minimum width=2.5em] (mikrocontroller) {Mikrocontroller};
+\node [draw, fill=green!40, rectangle, minimum height=4em, minimum width=2.5em] (mikrocontroller) {Mikrocontroller};
 \node [draw, fill=blue!20, rectangle, minimum height=8em, minimum width=2.5em, right of=mikrocontroller, xshift=2cm] (FPGA) {FPGA};
-\node [block, below of=mikrocontroller,xshift=1.5cm, yshift=-2cm] (brugerinput) {Bruger input};
-\node [block, below of=mikrocontroller, xshift=-1.5cm, yshift=-2cm] (brugerfeedback) {Bruger feedback};
-\node [block, right of=FPGA, xshift=1.5cm, yshift=1.25cm] (H-bro-a) {H-bro};
-\node [block, right of=H-bro-a, xshift=1.75cm] (DCmotorA) {DC motor};
+\node [blockgreen, below of=mikrocontroller,xshift=1.5cm, yshift=-2cm] (brugerinput) {Bruger input};
+\node [blockgreen, below of=mikrocontroller, xshift=-1.5cm, yshift=-2cm] (brugerfeedback) {Bruger feedback};
+\node [blocknon, right of=FPGA, xshift=1.5cm, yshift=1.25cm] (H-bro-a) {H-bro};
+\node [blockorange, right of=H-bro-a, xshift=1.75cm] (DCmotorA) {DC motor};
 \node [output, right of=DCmotorA, xshift=1cm] (output1){};
-\node [block, right of=FPGA, xshift=1.5cm, yshift=-1.25cm] (H-bro-b) {H-bro};
-\node [block, right of=H-bro-b, xshift=1.75cm] (DCmotorB) {DC motor};
+\node [blocknon, right of=FPGA, xshift=1.5cm, yshift=-1.25cm] (H-bro-b) {H-bro};
+\node [blockorange, right of=H-bro-b, xshift=1.75cm] (DCmotorB) {DC motor};
 \node [output, right of=DCmotorB, xshift=1cm] (output2){};
 \node [above of=FPGA, yshift=-0.1cm] (Pan) {\footnotesize Pan};
 \node [below of=FPGA, yshift=0.1cm] (Tilt) {\footnotesize Tilt};
