--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -26,6 +26,7 @@
 \include{./content/indledning}
 \include{./content/problemformulering}
 \include{./content/kravspecifikation}
+\include{./content/projekt_overblik}
 %%%%%%%%%%%% Sektioner %%%%%%%%%%%%
 \include{./content/PTS}
 \include{./content/koordinattransformation}
